# ibb

./: CMakeLists.txt  Config.h  DynamicTimeWarping.cpp  DynamicTimeWarping.h  FrameProcessor.cpp  FrameProcessor.h  IFrameProcessor.h  Main.cpp  PreProcessor.cpp  PreProcessor.h  VideoAnalysis.cpp  VideoAnalysis.h  VideoCapture.cpp  VideoCapture.h
package_bgs/: AdaptiveBackgroundLearning.cpp  AdaptiveBackgroundLearning.h  AdaptiveSelectiveBackgroundLearning.cpp  AdaptiveSelectiveBackgroundLearning.h  FrameDifferenceBGS.cpp  FrameDifferenceBGS.h  GMG.cpp  GMG.h  IBGS.h  MixtureOfGaussianV1BGS.cpp  MixtureOfGaussianV1BGS.h  MixtureOfGaussianV2BGS.cpp  MixtureOfGaussianV2BGS.h  StaticFrameDifferenceBGS.cpp  StaticFrameDifferenceBGS.h  WeightedMovingMeanBGS.cpp  WeightedMovingMeanBGS.h  WeightedMovingVarianceBGS.cpp  WeightedMovingVarianceBGS.h
package_bgs/pt/: PBAS.cpp  PBAS.h  PixelBasedAdaptiveSegmenter.cpp  PixelBasedAdaptiveSegmenter.h
